<resources>
    <string name="nav_header_subtitle" translatable="false">mail@gmail.com</string>
    <string name="pref_dark_mode" translatable="false">pref_dark_mode</string>
    <string name="pref_reset_general_settings" translatable="false">prev_reset_general_settings</string>
    <string name="pref_student_mode" translatable="false">pref_student_mode</string>
    <string name="pref_all_notifications" translatable="false">pref_all_notifications</string>
    <string name="pref_default_system_time" translatable="false">pref_default_system_time</string>
    <string name="pref_default_arrival_time" translatable="false">pref_default_arrival_time</string>
    <string name="pref_default_lunch_break_time" translatable="false">pref_default_lunch_break_time</string>
    <string name="midnight_timestamp" translatable="false">00:00</string>
    <string name="pref_system_dark_mode" translatable="false">pref_system_dark_mode</string>
    <string name="pref_default_evening_break_time" translatable="false">pref_default_evening_break_time</string>
    <string name="pref_default_custom_breaks" translatable="false">pref_default_custom_breaks</string>
    <string name="start_colon_space" translatable="false">\"start: \"</string>
    <string name="space_end_colon_space" translatable="false">\" end: \"</string>
    <string name="space_took_colon_space" translatable="false">\" took: \"</string>
    <string name="newline_preDefinedBreak_space_hashmark" translatable="false">\"\nPre defined break #\"</string>
    <string name="newline_customBreak_space_hashmark" translatable="false">\nCustom break #</string>
    <string name="newline_tookEveningBreak_colon_space" translatable="false">\"\nTook evening break: \"</string>
    <string name="tag_calc_day_no_exit" translatable="false">CALC_DAY_NO_EXIT_TAG</string>
    <string name="newline_halfDay_colon_space" translatable="false">\n${halfDay_colon} </string>
    <string name="newline_fullDay_colon_space" translatable="false">\n${fullDay_colon} </string>
    <string name="newline_zeroHours_colon_space" translatable="false">\n${zeroHours_colon} </string>
    <string name="newline_additional3andhalfHours_colon_space" translatable="false">\n${additional3andhalfHours_colon} </string>
    <string name="newline_additional6hours_colon_space" translatable="false">\n${additional6hours_colon} </string>
    <string name="tag_gallery" translatable="false">GALLERY_TAG</string>
    <string name="tag_home" translatable="false">HOME_TAG</string>
    <string name="tag_daily_report" translatable="false">DAILY_REPORT_TAG</string>
    <string name="tag_monthly_report" translatable="false">MONTHLY_REPORT_TAG</string>
    <string name="pref_existing_user" translatable="false">pref_existing_user</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="tag_settings_fragment" translatable="false">SETTINGS_FRAGMENT</string>
    <string name="empty" translatable="false" />
    <string name="tag_messages_fragment" translatable="false">Message Fragment</string>
    <string name="tag_sync_fragment" translatable="false">Sync Fragment</string>
    <string name="newline_additional125_colon_space" translatable="false">\n${additional125_colon} </string>
    <string name="newline_additional150_colon_space" translatable="false">\n${additional150_colon} </string>
    <string name="timestamp_format" translatable="false">%02d:%02d</string>
    <string name="newline_totalTime_colon_space" translatable="false">\n${totalTime_colon} </string>
    <string name="newline_totalZeroHours_colon_space" translatable="false">\n${totalZeroHours_colon} </string>
    <string name="newline_totalAdditionalHours_colon_space" translatable="false">\n${totalAdditionalHours_colon} </string>
    <string name="newline_totalAdditional125hours_colon_space" translatable="false">\n${totalAdditional125hours_colon} </string>
    <string name="newline_totalAdditional150hours_colon_space" translatable="false">\n${totalAdditional150hours_colon} </string>
    <string name="newline_isFullDay_colon_space" translatable="false">\n{isFullDay_colon} </string>
    <string name="newline_totalGlobalAbsence_colon_space" translatable="false">\n{totalGlobalAbsence_colon} </string>
    <string name="newline_totalUnpaidAbsence_colon_space" translatable="false">\n{totalUnpaidAbsence_colon} </string>
    <string name="arrival_colon_space" translatable="false">{arrival_colon} </string>
    <string name="newline_exit_colon_space" translatable="false">\n${exit_colon} </string>
    <string name="newline_friday_colon_space" translatable="false">\n${friday}: </string>
    <string name="newline_student_colon_space" translatable="false">\n${student}: </string>
    <string name="tag_calc_day_with_exit" translatable="false">WITH_EXIT_FRAGMENT</string>
    <string name="pref_system_language" translatable="false">pref_system_language</string>
    <string name="pref_language" translatable="false">pref_language</string>
    <string name="pref_notify_lunch_break" translatable="false">pref_notify_lunch_break</string>
    <string name="pref_notify_evening_break" translatable="false">pref_notify_evening_break</string>
    <string name="pref_notify_night_break" translatable="false">pref_notify_night_break</string>
    <string name="pref_notify_mothers_transportation" translatable="false">pref_notify_mothers_transportation</string>
    <string name="pref_notify_afternoon_transportation" translatable="false">pref_notify_afternoon_transportation</string>
    <string name="pref_notify_evening_transportation" translatable="false">pref_notify_evening_transportation</string>
    <string name="pref_notify_night_transportation" translatable="false">pref_notify_night_transportation</string>
    <string name="pref_reminder_time" translatable="false">pref_reminder_time</string>
    <string name="pref_default_exit_time" translatable="false">pref_default_exit_time</string>
    <string name="pref_default_lunch_break_duration" translatable="false">pref_default_lunch_break_duration</string>
    <string name="pref_default_evening_break_duration" translatable="false">pref_default_evening_break_duration</string>
    <string name="pref_default_night_break_time" translatable="false">pref_default_night_break_time</string>
    <string name="pref_default_night_break_duration" translatable="false">pref_default_night_break_duration</string>
    <string name="pref_first_run" translatable="false">pref_first_run</string>
    <string name="regex_24hour_timestamp_format" translatable="false">^([01][0-9]|2[0-3]):([0-5][0-9])$</string>
    <string name="pref_custom_breaks" translatable="false">pref_custom_breaks</string>
    <string name="arg_current_month" translatable="false">arg_current_month</string>
    <string name="arg_current_year" translatable="false">arg_current_year</string>
    <string name="tag_monthly_list" translatable="false">TAG_MONTHLY_LIST</string>
    <string name="tag_monthly_summary" translatable="false">MONTHLY_SUMMARY_TAG</string>
    <string name="tag_monthly_view" translatable="false">MONTHLY_VIEW_TAG</string>
    <string name="pref_default_early_arrival_time" translatable="false">pref_default_early_arrival_time</string>
    <string name="app_name">Hours</string>
    <string name="btn_txt_register">Register</string>
    <string name="lbl_txt_register">Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_header_title">Hello username</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_in_to_existing_account">Sign in existing account</string>
    <string name="enter_time">Enter Time</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="login_using_fingerprint">Sign in using fingerprint</string>
    <string name="enter_password_instead">Enter password instead</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">Settings</string>
    <string name="general_header">General settings</string>
    <string name="notifications_header">Notifications</string>
    <string name="times_header">Default Timestamps</string>
    <string name="open">Navigation open</string>
    <string name="close">Navigation close</string>
    <string name="headline_when_to_leave">When should I leave?</string>
<string name="halfDay_colon">Half day:</string>
    <string name="fullDay_colon">Full day:</string>
    <string name="zeroHours_colon">Unpaid:</string>
    <string name="additional3andhalfHours_colon">3.5 hours:</string>
    <string name="additional6hours_colon">6 hours:</string>
    <string name="email_subject_issue">Issue regarding the Hours app</string>
    <string name="additional125_colon">Additional 125%:</string>
    <string name="additional150_colon">Additional 150%:</string>
    <string name="totalTime_colon">Total time:</string>
    <string name="totalZeroHours_colon">Zero hours:</string>
    <string name="totalAdditionalHours_colon">Additional:</string>
    <string name="totalAdditional125hours_colon">Additional 125%:"</string>
    <string name="totalAdditional150hours_colon">Additional 150%:</string>
    <string name="isFullDay_colon">Is full day:</string>
    <string name="totalGlobalAbsence_colon">Global absence:</string>
    <string name="totalUnpaidAbsence_colon">Unpaid absence:</string>
    <string name="arrival_colon">Arrival:</string>
    <string name="exit_colon">Exit:</string>
    <string name="friday">Friday</string>
    <string name="student">Student</string>
    <string name="exit">Exit</string>
    <string name="arrival">Arrival</string>
    <string name="exit_day">Exit at end of the day:</string>
    <string name="hours_calculation">Hours Calculation</string>
    <string name="exit_time">Exit time</string>
    <string name="arrival_day">Arrival at start of the day:</string>
    <string name="daily_calculation">Daily calculation</string>
    <string name="total_hours">Total Hours</string>
    <string name="dark_mode">Dark mode</string>
    <string name="use_system_default_dark_mode">Use system\'s default mode</string>
    <string name="you_are_weak">You are weak.</string>
    <string name="you_chose_wisely">You chose wisely.</string>
    <string name="personal_preferences">Personal Preferences</string>
    <string name="thank_god_its_over">Thank god it\'s over</string>
    <string name="dont_worry_youre_halfway_there">Don\'t worry, you\'re half-way there!</string>
    <string name="student_mode">Student Mode</string>
    <string name="language">Language</string>
    <string name="use_system_default_language">Use system\'s default language</string>
    <string name="hebrew_entry">Hebrew</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="sign_in_via_google">Sign in with google</string>
    <string name="or">or</string>
    <string name="repeat_on">Repeat on:</string>
    <string name="sunday_abbriviated">Sun</string>
    <string name="monday_abbriviated">Mon</string>
    <string name="tuesday_abbriviated">Tue</string>
    <string name="wednesday_abbriviated">Wed</string>
    <string name="thursday_abbriviated">Thu</string>
    <string name="friday_abbriviated">Fri</string>
</resources>