<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:key="@string/pref_dark_mode"
        app:title="@string/dark_mode"
        app:summaryOff="@string/you_are_weak"
        app:summaryOn="@string/you_chose_wisely"
        app:defaultValue="true"/>

    <ListPreference
        app:defaultValue="iw"
        app:entries="@array/language_entries"
        app:entryValues="@array/language_values"
        app:key="@string/pref_language"
        app:title="@string/language"
        app:useSimpleSummaryProvider="true" />


    <SwitchPreferenceCompat
        app:key="@string/pref_student_mode"
        app:summaryOff="@string/thank_god_its_over"
        app:summaryOn="@string/dont_worry_youre_halfway_there"
        app:title="@string/student_mode"
        app:defaultValue="false"/>

</PreferenceScreen>