<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="User Times"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true">
        <Preference
            app:title="Arrival time"
            app:key="@string/pref_default_arrival_time"
            app:useSimpleSummaryProvider="true"/>
        <Preference
            app:title="Exit time"
            app:key="@string/pref_default_arrival_time"
            app:useSimpleSummaryProvider="true"/>
        <MultiSelectListPreference
            app:title="Custom Breaks"
            app:key="@string/pref_default_custom_breaks"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>
    <PreferenceCategory app:title="System Times"
        app:allowDividerBelow="true"
        app:allowDividerAbove="true">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_default_system_time"
            app:title="Use default time settings"
            app:disableDependentsState="true"/>

        <Preference
            app:dependency="@string/pref_default_system_time"
            app:title="Default launch break time"
            app:key="@string/pref_default_launch_break_time"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            app:dependency="@string/pref_default_system_time"
            app:title="Default evening break time"
            app:key="@string/pref_default_evening_break_time"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>